[package]
name = "transaction-engine"
version = "0.1.0"
edition = "2021"
author = "Bogdan Floris"
about = "Engine that processes transactions and outputs the state of the clients' accounts."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"]}
csv = "1.1"
serde = { version = "1", features = ["derive"] }
